# orion-waveshare-rotary-dial

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  biome.json  index.html  manifest.json  package-lock.json  package.json  tsconfig.build.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
archive/: README.md
archive/dial-idf-companion/: CMakeLists.txt  sdkconfig.defaults
archive/dial-idf-companion/main/: CMakeLists.txt  main.c
archive/esphome/: orion-knob.yaml
archive/knob-probe/: CMakeLists.txt  sdkconfig.defaults
archive/knob-probe-companion/: CMakeLists.txt
archive/knob-probe-companion/main/: CMakeLists.txt  knob_probe.c
archive/moddable-dial/: main.ts  package.json
archive/moddable-dial/assets/: README.md
archive/moddable-dial/drivers/cst816/: cst816.js  manifest.json  modCST816.c
archive/moddable-dial/drivers/knob/: knob.js  manifest.json  modKnob.c
archive/moddable-dial/drivers/st77916/: modST77916.c  port.sh  st77916.js
archive/moddable-dial/src/: config.ts  cst816.ts  input.ts  mcp.ts  net.ts
archive/moddable-dial/test/companion-uart/: main.js  manifest.json
archive/moddable-dial/test/encoder-test/: main.js  manifest.json
archive/moddable-dial/test/input-test/: main.js  manifest.json
archive/moddable-dial/test/knob-native-test/: main.js  manifest.json
archive/moddable-dial/test/touch-bundled-test/: main.js  manifest.json
archive/moddable-dial/test/touch-cst816s-test/: main.js  manifest.json
archive/moddable-dial/test/touch-native-test/: main.js  manifest.json
archive/moddable-dial/test/touch-test/: main.js  manifest.json
archive/reference-dial/: dial.ts
archive/ts-hub/: .env.example  package-lock.json  package.json  tsconfig.json  vite.config.ts
archive/ts-hub/simulator/: README.md  index.html  main.ts  style.css
archive/ts-hub/src/: app.ts  main.ts
archive/ts-hub/src/cli/: orion-login.ts
archive/ts-hub/src/controller/: controller.test.ts  controller.ts
archive/ts-hub/src/device/: fake-device-client.ts
archive/ts-hub/src/domain/: bindings.ts  events.ts  state.ts
archive/ts-hub/src/hardware/: dial-transport.ts  index.ts  mock-transport.ts  mqtt-transport.ts  protocol.test.ts
archive/ts-hub/src/lib/: temperature.ts
docs/: ARCHITECTURE.md  ORION_MCP.md
firmware/: README.md
firmware/backups/: README.md
firmware/dial/: README.md  manifest.json  tsconfig.json
firmware/dial-idf/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/dial-idf/components/dial_display/: CMakeLists.txt  dial_display.c  dial_display.h  idf_component.yml  user_config.h
firmware/dial-idf/components/dial_haptics/: CMakeLists.txt  dial_haptics.c  dial_haptics.h
firmware/dial-idf/components/dial_knob/: CMakeLists.txt
firmware/dial-idf/components/dial_mcp/: CMakeLists.txt  dial_mcp.c  dial_mcp.h
firmware/dial-idf/components/dial_net/: CMakeLists.txt  dial_wifi.c  dial_wifi.h
firmware/dial-idf/components/dial_oauth/: CMakeLists.txt  dial_oauth.c  dial_oauth.h  idf_component.yml  orion_root_ca.pem
firmware/dial-idf/components/dial_ota/: CMakeLists.txt  dial_ota.c  dial_ota.h  idf_component.yml
firmware/dial-idf/components/dial_power/: CMakeLists.txt  dial_power.c  dial_power.h
firmware/dial-idf/components/dial_ui/: CMakeLists.txt  dial_font_num_88.c  dial_list.c  dial_list.h  dial_palette.c  dial_palette.h  idf_component.yml  scr_about.c  scr_boost.c  scr_connecting.c  scr_dial.c  scr_menu.c  scr_netpick.c  scr_passkey.c  scr_quick.c  scr_settings.c  scr_setup.c  scr_sidepick.c  scr_standby.c  scr_tonight.c  scr_updating.c  scr_welcome.c  scr_wifi.c  ui_router.c  ui_router.h  ui_screens.c  ui_screens.h  ui_screens_internal.h
firmware/dial-idf/docs/: UI_DESIGN_SPEC.md  design-spec.md
firmware/dial-idf/main/: CMakeLists.txt  idf_component.yml  main.c  secrets.h.example  user_config.h
firmware/dial-idf/test/: README.md  test_dial_rel.c
firmware/dial/src/: oauth.ts  orion.ts  ui.ts  zones.ts
firmware/knob-probe-companion/: sdkconfig.defaults
firmware/knob-probe/main/: knob_probe.c
firmware/reference-dial/: dial.ts
simulator/: CMakeLists.txt  README.md  lv_conf.h  main.c  main.ts  renderer.ts  sim_state.c  sim_state.h  stubs.c
simulator/shims/: esp_app_desc.h  esp_err.h  esp_log.h  esp_wifi.h
simulator/shims/freertos/: FreeRTOS.h  task.h
src/: app.ts
src/cli/: orion-tools.ts
src/config/: env.ts
src/controller/: controller.test.ts  controller.ts  mapping.test.ts  mapping.ts
src/device/: device-client.ts  fake-device-client.test.ts  fake-device-client.ts  index.ts
src/device/orion/: mcp-client.ts  oauth-provider.ts  tool-map.ts
src/domain/: commands.ts  state.ts
src/hardware/: dial-transport.ts  protocol.test.ts  protocol.ts
src/lib/: broker.ts  logger.ts  retry.ts
web-flasher/: README.md  index.html
(+18 files in other folders)
